--- a/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.html
+++ b/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.html
@@ -1,52 +1,71 @@
-<div class="container">
-    <div class='signin__background-container'>
-        <img class='signup__background' src="assets/images/ninjaBackground.svg">
-    </div>
-    <div class="container_content">
-        <div class="container_signin">
-            <p class="sign-in-question">Already have an account?</p>
-            <a href="https://www.google.com/" target="_blank">Sign in</a>
-        </div>
-        <div class="container__form-signup">
-            <h2 class="typography__white">Create Account</h2>
-            <div class="container__logo">
-                <img src="assets/images/logos/github.svg" (click)="onGitHubSignInClicked()">
-            </div>
-            <form [formGroup]="signUpFormGroup" (ngSubmit)="submit()">
-                <div class="dividers-container">
-                    <div class="divider"></div>
-                        <h4 class="or">OR</h4>
-                    <div class="divider"></div>
-                </div>
-                <div class="name-inputs-container">
-                    <div class="name-input-container">
-                        <app-input class="input_first-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'First Name'" [placeholder]="'First Name'" formControlName="firstName"></app-input>
-                    </div>
-                    <div class="name-input-container">
-                        <app-input class="input_last-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Last Name'" [placeholder]="'Last Name'" formControlName="lastName"></app-input>
-                    </div>
-                </div>
-                <div>
-                    <app-input class="input_big" [theme]="darkTheme" [inputValidators]="emailValidators" [type]="'email'" [label]="'Email'" [placeholder]="'example@gmail.com'" formControlName="email" ></app-input>
-                </div>
-                <div>
-                    <app-input class="input_big" [theme]="darkTheme" [inputValidators]="passwordValidators" [type]="'password'" [label]="'Password'" [placeholder]="'At least 8 characters, numbers and latin letters only'" formControlName="password" ></app-input>
-                </div>
-                <div>
-                    <app-input class="input_big" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Mobile phone (optional)'" [placeholder]="'Mobile phone (optional)'" formControlName="mobilePhone" [prefix]="'+375'" [mask]="'(00)-000-00-00'"></app-input>
-                </div>
-                
-                <div>
-                </div>
-            
-                <div class="container__button">
-                    <app-button class="sign-up-button" type="flat" (click)="submit()">SIGN UP</app-button>
-                </div>
-   
-            </form>
-        
-             <mat-error *ngIf="authError" (click)="submit()">{{ authError }}</mat-error>
-        </div>    
-    </div>
+<div class="sign-up-page">
+	<div class="sign-up-page__container-img">
+		<img src="assets/images/authorization-bg.svg" alt="authorization" class="sign-up-page__img" />
+		<img src="assets/images/logo-dark.svg" alt="logo-dark" class="sign-up-page__logo" />
+	</div>
+	<div class="sign-up-page__container-page">
+		<div class="sign-up-page__header">
+			<span class="sign-up-page__link-sign-up sign-up-page__link-sign-up--white">
+				{{ "SIGN_UP.HAS_ACCOUNT" | translate }}</span>
+			<a (click)="onSignIn()"
+				class="sign-up-page__link-sign-up sign-up-page__link-sign-up--blue">{{ "SIGN_UP.SIGN_IN_BTN" | translate }}</a>
+		</div>
+		<div class="sign-up-page__container-form">
+			<h2 class="sign-up-page__link-welcomeBack">
+				{{ "SIGN_UP.CREATE_ACCOUNT" | translate }}
+			</h2>
 
+			<div (click)="onGitHubSignInClicked()" class="sign-up-page__icon">
+				<img src="assets/images/social-media-icons/github.svg" alt="gitHub-icon" />
+			</div>
+
+			<div class="sign-up-page__container-divider">
+				<div class="sign-up-page__divider"></div>
+				<p class="sign-up-page__or">{{ "SIGN_UP.OR" | translate }}</p>
+				<div class="sign-up-page__divider"></div>
+			</div>
+			<form [formGroup]="signUpFormGroup" (ngSubmit)="submit()" class="sign-up-page__form">
+                <div class="sign-up-page__inputs-name-container">
+                    <div class="sign-up-page__input-first-name-container">
+                        <app-input class="sign-up-page__input-first-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'First Name'" [placeholder]="'First Name'" formControlName="firstName"></app-input>
+                    </div>
+                    <div class="sign-up-page__input-last-name-container">
+                        <app-input class="sign-up-page__input-last-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Last Name'" [placeholder]="'Last Name'" formControlName="lastName"></app-input>
+                    </div>
+                </div>
+				<div class="sign-up-page__container-input-big">
+					<app-input [inputValidators]="emailValidators" [theme]="darkTheme"
+						[label]="'SIGN_UP.EMAIL' | translate" [type]="'email'" [placeholder]="'pat@example.com'"
+						formControlName="email" class="sign-up-page__input-email"></app-input>
+				</div>
+
+				<div>
+					<app-input [theme]="darkTheme" [inputValidators]="passwordValidators" [type]="'password'"
+						[label]="'SIGN_UP.PASSWORD' | translate" [secured]="false" formControlName="password"
+						class="sign-up-page__input-password">
+					</app-input>
+                </div>                
+                <div>
+                    <app-input
+                        class="input_big"
+                        [theme]="darkTheme"
+                        [inputValidators]="textSyncValidators"
+                        [type]="'text'"
+                        [label]="'Mobile phone (optional)'"
+                        [placeholder]="'Mobile phone (optional)'"
+                        formControlName="mobilePhone"
+                        [prefix]="'+375'"
+                        [mask]="'(00)-000-00-00'"
+                        class="sign-up-page__input-mobile"></app-input>
+                </div>
+
+				<div class="sign-up-page__btn">
+					<app-button type="flat" [theme]="darkTheme">{{
+            "SIGN_UP.SIGN_UP_BTN" | translate
+          }}</app-button>
+				</div>
+			</form>
+			<mat-error *ngIf="authError">{{ authError }}</mat-error>
+		</div>
+	</div>
 </div>
