feat: fix user property name

--- a/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.html
+++ b/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.html
@@ -16,7 +16,7 @@
 			</h2>
 
 			<div (click)="onGitHubSignInClicked()" class="sign-up-page__icon">
-				<img src="assets/images/social-media-icons/github.svg" alt="gitHub-icon" />
+				<img src="assets/images/social-media/github.svg" alt="gitHub-icon" />
 			</div>
 
 			<div class="sign-up-page__container-divider">
@@ -30,7 +30,7 @@
                         <app-input class="sign-up-page__input-first-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'First Name'" [placeholder]="'First Name'" formControlName="firstName"></app-input>
                     </div>
                     <div class="sign-up-page__input-last-name-container">
-                        <app-input class="sign-up-page__input-last-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Last Name'" [placeholder]="'Last Name'" formControlName="lastName"></app-input>
+                        <app-input class="sign-up-page__input-last-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Last Name'" [placeholder]="'Last Name'" formControlName="secondName"></app-input>
                     </div>
                 </div>
 				<div class="sign-up-page__container-input-big">
