--- a/frontend/src/app/libs/common-components/components/tasks-creator/tasks-list/tasks-list.component.html
+++ b/frontend/src/app/libs/common-components/components/tasks-creator/tasks-list/tasks-list.component.html
@@ -1,15 +1,17 @@
 <div class="tasks-list">
   <div class="tasks-list__header event-gradient">
-    <span>tasks ({{ tasksNumber }})</span>
-    <button>
+    <span class="tasks-list__title">Tasks ({{ tasksLength }})</span>
+    <button class="tasks-list__add-btn">
       <app-icon
         class="icon-button__icon"
-        [icon]="'endIcon'"
+        [icon]="'add'"
         [size]="'s'"
       ></app-icon>
     </button>
   </div>
   <div class="tasks-list__content">
-    <div class="tasks-list__item">asd</div>
+    <div class="tasks-list__item" *ngFor="let task of taskList; let i = index" (click)="showTask(i)">
+      {{ task.taskName }}
+    </div>
   </div>
 </div>
