feat: add task creator

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,20 +3,20 @@
 @import "scrollbar";
 
 @font-face {
-  font-family: "Roboto Bold";
-  src: url("./assets/fonts/Roboto-Bold.ttf");
+  font-family: 'Roboto Bold';
+  src: url('./assets/fonts/Roboto-Bold.ttf');
   font-weight: bold;
 }
 
 @font-face {
-  font-family: "Roboto Medium";
-  src: url("./assets/fonts/Roboto-Medium.ttf");
+  font-family: 'Roboto Medium';
+  src: url('./assets/fonts/Roboto-Medium.ttf');
   font-weight: 500;
 }
 
 @font-face {
-  font-family: "Roboto Regular";
-  src: url("./assets/fonts/Roboto-Regular.ttf");
+  font-family: 'Roboto Regular';
+  src: url('./assets/fonts/Roboto-Regular.ttf');
   font-weight: normal;
 }
 
