--- a/frontend/src/app/libs/container/components/header/header.component.html
+++ b/frontend/src/app/libs/container/components/header/header.component.html
@@ -4,33 +4,22 @@
 		<img class="header__logo"
 			 src="assets/images/logo.svg">
 	</div>
-	<div class="header__admin-buttons"
-		 *ngIf="userService.user?.isAdmin">
+	<div class="header__admin-buttons" *ngIf="userService.isAdminUser">
 		<app-button class="header__admin-button"
-					[class.header__admin-button--active]="adminLinksActivation.get(eventsLink)"
-					[theme]="darkTheme"
-					[disableRipple]="true"
-					[disableHover]="true"
-					(click)="onEventsClick()"
-					routerLink="/landing">
+			[class.header__admin-button--active]="adminLinksActivation.get(eventsLink)" [theme]="darkTheme"
+			[disableRipple]="true" [disableHover]="true" (click)="onEventsClick()">
 			{{"BUTTON.EVENTS" | translate}}
 		</app-button>
 		<app-button class="header__admin-button"
-					[class.header__admin-button--active]="adminLinksActivation.get(administrationLink)"
-					[theme]="darkTheme"
-					[disableRipple]="true"
-					[disableHover]="true"
-					(click)="onAdministrationClick()"
-					routerLink="/adminrolemanagement">
+			[class.header__admin-button--active]="adminLinksActivation.get(administrationLink)" [theme]="darkTheme"
+			[disableRipple]="true" [disableHover]="true" (click)="onAdministrationClick()">
 			{{"BUTTON.ADMINISTRATION" | translate}}
 		</app-button>
 	</div>
 	<div class="header__common-buttons">
-		<app-button class="header__button header__button--create-event"
-					*ngIf="userService.isEventManagerUser"
-					[theme]="darkTheme"
-					[type]="outlinedButtonType"
-					(click)="templatepopoverlight.open()">
+		<app-localization class="header__localization"></app-localization>
+		<app-button class="header__button" *ngIf="userService.isEventManagerUser" [theme]="darkTheme"
+			[type]="flatButtonType">
 			{{"BUTTON.CREATE_EVENT" | translate}}
 		</app-button>
 		<app-popover [theme]="lightTheme"
