--- a/frontend/src/app/libs/common-components/components/tasks-creator/tasks-list/tasks-list.component.html
+++ b/frontend/src/app/libs/common-components/components/tasks-creator/tasks-list/tasks-list.component.html
@@ -1,13 +1,16 @@
 <div class="tasks-list">
   <div class="tasks-list__header event-gradient">
-    <span class="tasks-list__title">Tasks ({{ tasksLength }})</span>
-    <button class="tasks-list__add-btn">
+    <span class="tasks-list__title">{{ 'TASK-CREATION.LIST_HEADER_TITLE' | translate }} ({{ tasksLength }})</span>
+    <app-button
+      class="tasks-list__add-btn"
+      [type]="'basic'"
+      [color]="'white'">
       <app-icon
         class="icon-button__icon"
         [icon]="'add'"
         [size]="'s'"
       ></app-icon>
-    </button>
+    </app-button>
   </div>
   <div class="tasks-list__content">
     <div class="tasks-list__item" *ngFor="let task of taskList; let i = index" (click)="showTask(i)">
