--- a/frontend/src/app/libs/common-components/components/tasks-creator/tasks-list/tasks-list.component.html
+++ b/frontend/src/app/libs/common-components/components/tasks-creator/tasks-list/tasks-list.component.html
@@ -1,14 +1,13 @@
 <div class="tasks-list">
   <div class="tasks-list__header event-gradient">
     <span class="tasks-list__title">{{ 'TASK-CREATION.LIST_HEADER_TITLE' | translate }} ({{ tasksLength }})</span>
-    <app-button
-      class="tasks-list__add-btn"
-      [type]="'basic'"
-      [color]="'white'">
-      <app-icon
-        class="icon-button__icon"
-        [icon]="'add'"
-        [size]="'s'"
+    <app-button class="tasks-list__add-btn"
+                [type]="'basic'"
+                (click)="addNewTask()"
+                [color]="'white'">
+      <app-icon class="icon-button__icon"
+                [icon]="'add'"
+                [size]="'s'"
       ></app-icon>
     </app-button>
   </div>
