refactor: task creator

--- a/frontend/src/app/libs/common-components/components/checkbox/checkbox.component.html
+++ b/frontend/src/app/libs/common-components/components/checkbox/checkbox.component.html
@@ -1,4 +1,4 @@
-<ng-container class="checkbox-group">
+<div class="checkbox-group">
 	<mat-checkbox
 		color="primary"
 		[disabled]="option.disabled"
@@ -15,4 +15,4 @@
 			{{option[labelField]}}
 		</span>
 	</mat-checkbox>
-</ng-container>
+</div>
